--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.14.0",
+    "@types/react": "19.1.0",
+    "typescript": "5.8.2"
   }
 }
